--- a/src/assets/scss/paper-kit/_sections.scss
+++ b/src/assets/scss/paper-kit/_sections.scss
@@ -37,6 +37,20 @@
     font-weight: bold;
     display: inline;
 }
+
+.mapWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.mapWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 .section-image,
 .section-gold,
 .section-dark{
